[package]
name = "rust_wpm"
version = "0.1.0"
authors = ["vringar <h_dieter@mail.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
webdriver_client = { path = "../webdriver_client" }
async-std = "1.5.0"
tracing = "0.1"
tracing-subscriber = "0.2"
either = "1.5.3"
eyre = "0.6.0"